# wittington-vc

./: .gitignore  README.md  pyproject.toml
docs/: ranked_prospects.csv  ranked_prospects.html
src/: exa_client.py  llm_client.py  main.py  models.py  reporting.py  scoring.py  scraper.py
src/db/: __init__.py  database.py
tests/: test_pipeline.py
